// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. bad index error list_ref: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "list_ref(list(1, 2, 3), 3);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 216: Error: head(xs) expects a pair as argument xs, but encountered null\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. bad index error list_ref: expectParsedError 2`] = `
Object {
  "alertResult": Array [],
  "code": "list_ref(list(1, 2, 3), -1);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 217: Error: tail(xs) expects a pair as argument xs, but encountered null\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. bad index error list_ref: expectParsedError 3`] = `
Object {
  "alertResult": Array [],
  "code": "list_ref(list(1, 2, 3), 1.5);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 217: Error: tail(xs) expects a pair as argument xs, but encountered null\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. bad index error list_ref: expectParsedError 4`] = `
Object {
  "alertResult": Array [],
  "code": "list_ref(list(1, 2, 3), '1');",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 215: Expected string on right hand side of operation, got number.\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. bad number error build_list: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "build_list(x => x, '1');",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 63: Expected number on left hand side of operation, got string.\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. bad number error enum_list: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "enum_list('1', '5');",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 203: Expected string on right hand side of operation, got number.\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. bad number error enum_list: expectParsedError 2`] = `
Object {
  "alertResult": Array [],
  "code": "enum_list('1', 5);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 201: Expected string on right hand side of operation, got number.\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. bad number error enum_list: expectParsedError 3`] = `
Object {
  "alertResult": Array [],
  "code": "enum_list(1, '5');",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 201: Expected number on right hand side of operation, got string.\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. non-list error accumulate: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "accumulate((x, y) => x + y, [1, 2, 3]);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 1: Expected 3 arguments, but got 2.\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. non-list error accumulate: expectParsedError 2`] = `
Object {
  "alertResult": Array [],
  "code": "accumulate((x, y) => x + y, [1, 2, 3]);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 1: Expected 3 arguments, but got 2.\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. non-list error append: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "append([1, 2, 3], list(1, 2, 3));",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 121: Error: tail(xs) expects a pair as argument xs, but encountered [1, 2, 3]\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. non-list error assoc: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "assoc(1, [1, 2, 3]);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Name assoc not declared.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. non-list error filter: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "filter(x => true, [1, 2, 3]);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 185: Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. non-list error for_each: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "for_each(x=>x, [1, 2, 3]);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 76: Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. non-list error length: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "length([1, 2, 3]);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 33: Error: tail(xs) expects a pair as argument xs, but encountered [1, 2, 3]\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. non-list error map: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "map(x=>x, [1, 2, 3]);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 47: Error: tail(xs) expects a pair as argument xs, but encountered [1, 2, 3]\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. non-list error member: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "member(1, [1, 2, 3]);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 136: Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. non-list error remove: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "remove(1, [1, 2, 3]);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 151: Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. non-list error remove_all: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "remove_all(1, [1, 2, 3]);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 169: Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. non-list error reverse: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "reverse([1, 2, 3]);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 106: Error: tail(xs) expects a pair as argument xs, but encountered [1, 2, 3]\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. non-list error set_head: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "set_head([1, 2, 3], 4);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 1: Error: set_head(xs,x) expects a pair as argument xs, but encountered [1, 2, 3]\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`These tests are reporting weird line numbers, as list functions are now implemented in Source. non-list error set_tail: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "set_tail([1, 2, 3], 4);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 1: Error: set_tail(xs,x) expects a pair as argument xs, but encountered [1, 2, 3]\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`display_list checks prepend type: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "display_list(build_list(i => i, 5), true);
0; // suppress long result in snapshot",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 1: TypeError: display_list expects the second argument to be a string\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`equal: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "!equal(1, x => x) && !equal(x => x, 1);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`non-list error head: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "head([1, 2, 3]);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 1: Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`non-list error tail: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "tail([1, 2, 3]);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 6: TypeError: Cannot create property 'Symbol(Symbol.toStringTag)' on boolean 'false'\\"
interpreted:\\"Line 1: Error: tail(xs) expects a pair as argument xs, but encountered [1, 2, 3]\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;
